# portfolio-website

./: .eslintrc  .prettierrc  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
archive/: accordion-recursive-nav.module.scss  accordion-recursive-nav.tsx
components/: NumberInput.tsx  P5Window.tsx  ProjectContainer.tsx  TiltOnlyBigScreen.tsx  UnderlineSVG.tsx  utils.ts
lib/: threeOutlinedDisc.ts
modules/rust-triplet/: Cargo.toml  FR_results.txt  NW_results.txt
modules/rust-triplet/pkg/: package.json  triplet_wasm.d.ts  triplet_wasm.js  triplet_wasm_bg.wasm  triplet_wasm_bg.wasm.d.ts  triplet_wasm_lib.d.ts  triplet_wasm_lib.js  triplet_wasm_lib_bg.wasm  triplet_wasm_lib_bg.wasm.d.ts
modules/rust-triplet/src/: bin.rs  build_triplet.rs  component_labelling.rs  get_best_triplet.rs  get_random_shape_plane.rs  lib.rs  shape_plane.rs  triplet.rs
pages/: 404.tsx  _app.tsx  _document.tsx  about.tsx  book-glow-shelf.tsx  chinese-lantern-lamp.tsx  circuit-text.tsx  dandelion-glow.tsx  flock-lights.tsx  flocking-simulation.tsx  font-designer.tsx  img-to-stamp.tsx  index.tsx  laatste-gedicht.tsx  p5-editor.tsx  projects.tsx  sd-software.tsx  si-software.tsx  smooth-moving-entity.tsx  triplet-designer-overview.tsx  triplet-designer.tsx  triplet-removing.tsx  triplet-research-fonts.tsx  triplet-research-random.tsx  triplet-research.tsx  triplet-shapeplanes.tsx  wire-structure-designer.tsx
public/: worker.js
styles/: _colors.scss  _customFormFields.scss  _links.scss  _spacings.scss  _texts.scss  globals.css  globals.scss
(+526 files in other folders)
